load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "test_easylog",
    hdrs = glob([
        "include/util/*.h",
    ]),
    srcs = [
        "main.cpp",
        "test_easylog.cpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "//:easylog",
        "//thirdparty:doctest",
    ],
)
